// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRole should close update role confirmation modal on clicking cancel 1`] = `
<body>
  <div>
    <div
      class="flex items-center align-middle my-8 justify-between"
      data-testid="edit-user-role"
    >
      <div
        class="w-1/5 font-sans font-bold subpixel-antialiased text-lg text-gray-600 mx-20"
      >
        Role
      </div>
      <div
        class="w-1/2 flex items-center align-middle mx-20"
      >
        <select
          class="font-sans rounded-md shadow-md font-semibold p-2 border-2 border-gray-200 outline-none"
          data-testid="input-role"
        >
          <option
            data-testid="options"
            value="ADMIN"
          >
            ADMIN
          </option>
          <option
            data-testid="options"
            selected=""
            value="MANAGER"
          >
            MANAGER
          </option>
          <option
            data-testid="options"
            value="VIEWER"
          >
            VIEWER
          </option>
        </select>
        <button
          aria-label="Administrator can create and manage mocks, and also has user management privileges"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          data-testid="user-role-tooltip"
          tabindex="0"
          type="button"
        >
          <svg
            class="text-gray-500 text-2xl"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
            />
            <path
              d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          class="flex items-center justify-center gap-1 px-9 py-2 mx-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-110 mx-4 text-gray-700 w-fit bg-green-300"
          data-testid="update-role-btn"
        >
          Update role
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`UserRole should render user role 1`] = `
<div>
  <div
    class="flex items-center align-middle my-8 justify-between"
    data-testid="edit-user-role"
  >
    <div
      class="w-1/5 font-sans font-bold subpixel-antialiased text-lg text-gray-600 mx-20"
    >
      Role
    </div>
    <div
      class="w-1/2 flex items-center align-middle mx-20"
    >
      <select
        class="font-sans rounded-md shadow-md font-semibold p-2 border-2 border-gray-200 outline-none"
        data-testid="input-role"
      >
        <option
          data-testid="options"
          value="ADMIN"
        >
          ADMIN
        </option>
        <option
          data-testid="options"
          selected=""
          value="MANAGER"
        >
          MANAGER
        </option>
        <option
          data-testid="options"
          value="VIEWER"
        >
          VIEWER
        </option>
      </select>
      <button
        aria-label="Manager can create and manage mocks, but cannot manage users"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element="true"
        data-testid="user-role-tooltip"
        tabindex="0"
        type="button"
      >
        <svg
          class="text-gray-500 text-2xl"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
          />
          <path
            d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`UserRole should show error notification when role update fails 1`] = `
<body>
  <div>
    <div
      class="flex items-center align-middle my-8 justify-between"
      data-testid="edit-user-role"
    >
      <div
        class="w-1/5 font-sans font-bold subpixel-antialiased text-lg text-gray-600 mx-20"
      >
        Role
      </div>
      <div
        class="w-1/2 flex items-center align-middle mx-20"
      >
        <select
          class="font-sans rounded-md shadow-md font-semibold p-2 border-2 border-gray-200 outline-none"
          data-testid="input-role"
        >
          <option
            data-testid="options"
            value="ADMIN"
          >
            ADMIN
          </option>
          <option
            data-testid="options"
            selected=""
            value="MANAGER"
          >
            MANAGER
          </option>
          <option
            data-testid="options"
            value="VIEWER"
          >
            VIEWER
          </option>
        </select>
        <button
          aria-label="Administrator can create and manage mocks, and also has user management privileges"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          data-testid="user-role-tooltip"
          tabindex="0"
          type="button"
        >
          <svg
            class="text-gray-500 text-2xl"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
            />
            <path
              d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          class="flex items-center justify-center gap-1 px-9 py-2 mx-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-110 mx-4 text-gray-700 w-fit bg-green-300"
          data-testid="update-role-btn"
        >
          Update role
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`UserRole should show update role button on changing user role 1`] = `
<div>
  <div
    class="flex items-center align-middle my-8 justify-between"
    data-testid="edit-user-role"
  >
    <div
      class="w-1/5 font-sans font-bold subpixel-antialiased text-lg text-gray-600 mx-20"
    >
      Role
    </div>
    <div
      class="w-1/2 flex items-center align-middle mx-20"
    >
      <select
        class="font-sans rounded-md shadow-md font-semibold p-2 border-2 border-gray-200 outline-none"
        data-testid="input-role"
      >
        <option
          data-testid="options"
          value="ADMIN"
        >
          ADMIN
        </option>
        <option
          data-testid="options"
          selected=""
          value="MANAGER"
        >
          MANAGER
        </option>
        <option
          data-testid="options"
          value="VIEWER"
        >
          VIEWER
        </option>
      </select>
      <button
        aria-label="Administrator can create and manage mocks, and also has user management privileges"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element="true"
        data-testid="user-role-tooltip"
        tabindex="0"
        type="button"
      >
        <svg
          class="text-gray-500 text-2xl"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
          />
          <path
            d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="flex items-center justify-center gap-1 px-9 py-2 mx-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-110 mx-4 text-gray-700 w-fit bg-green-300"
        data-testid="update-role-btn"
      >
        Update role
      </button>
    </div>
  </div>
</div>
`;

exports[`UserRole should show update role confirmation modal on clicking update role button 1`] = `
<body>
  <div>
    <div
      class="flex items-center align-middle my-8 justify-between"
      data-testid="edit-user-role"
    >
      <div
        class="w-1/5 font-sans font-bold subpixel-antialiased text-lg text-gray-600 mx-20"
      >
        Role
      </div>
      <div
        class="w-1/2 flex items-center align-middle mx-20"
      >
        <select
          class="font-sans rounded-md shadow-md font-semibold p-2 border-2 border-gray-200 outline-none"
          data-testid="input-role"
        >
          <option
            data-testid="options"
            value="ADMIN"
          >
            ADMIN
          </option>
          <option
            data-testid="options"
            selected=""
            value="MANAGER"
          >
            MANAGER
          </option>
          <option
            data-testid="options"
            value="VIEWER"
          >
            VIEWER
          </option>
        </select>
        <button
          aria-label="Administrator can create and manage mocks, and also has user management privileges"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          data-testid="user-role-tooltip"
          tabindex="0"
          type="button"
        >
          <svg
            class="text-gray-500 text-2xl"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
            />
            <path
              d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          class="flex items-center justify-center gap-1 px-9 py-2 mx-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-110 mx-4 text-gray-700 w-fit bg-green-300"
          data-testid="update-role-btn"
        >
          Update role
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      class="w-screen h-screen flex justify-center items-center bg-slate-500/[0.8] align-middle fixed left-0 right-0 top-0 bottom-0"
      data-testid="confirmation-modal"
    >
      <div
        class="xl:w-1/3 lg:w-1/3 md:w-1/2 rounded-md shadow-lg bg-white p-6"
      >
        <div
          class="text-center font-sans font-semibold text-xl my-4 text-gray-700"
          data-testid="confirmation-modal-message"
        >
          Are you sure you want to update user role to "ADMIN" ?
        </div>
        <div
          class="w-1/2 text-center font-sans font-semibold text-lg mx-auto mt-8 cursor-pointer transition-all duration-100 hover:scale-95 text-gray-500 hover:text-gray-900"
          data-testid="confirmation-modal-cancel-btn"
        >
          Cancel
        </div>
        <div
          class="w-1/2 text-center font-sans font-semibold text-lg mx-auto mt-8 cursor-pointer transition-all duration-100 hover:scale-95 bg-teal-500 text-white rounded-full shadow-md p-4 mb-4 hover:bg-teal-600"
          data-testid="confirmation-modal-confirm-btn"
        >
          Update user role
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UserRole should update role on clicking confirm button 1`] = `
<body>
  <div>
    <div
      class="flex items-center align-middle my-8 justify-between"
      data-testid="edit-user-role"
    >
      <div
        class="w-1/5 font-sans font-bold subpixel-antialiased text-lg text-gray-600 mx-20"
      >
        Role
      </div>
      <div
        class="w-1/2 flex items-center align-middle mx-20"
      >
        <select
          class="font-sans rounded-md shadow-md font-semibold p-2 border-2 border-gray-200 outline-none"
          data-testid="input-role"
        >
          <option
            data-testid="options"
            value="ADMIN"
          >
            ADMIN
          </option>
          <option
            data-testid="options"
            selected=""
            value="MANAGER"
          >
            MANAGER
          </option>
          <option
            data-testid="options"
            value="VIEWER"
          >
            VIEWER
          </option>
        </select>
        <button
          aria-label="Administrator can create and manage mocks, and also has user management privileges"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          data-testid="user-role-tooltip"
          tabindex="0"
          type="button"
        >
          <svg
            class="text-gray-500 text-2xl"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
            />
            <path
              d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          class="flex items-center justify-center gap-1 px-9 py-2 mx-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-110 mx-4 text-gray-700 w-fit bg-green-300"
          data-testid="update-role-btn"
        >
          Update role
        </button>
      </div>
    </div>
  </div>
</body>
`;
